tests/sumo/errors/person/vehicle_as_person/errors.sumo.agg
Warning: 1 total messages of type: Vehicle type '%' with vClass=pedestrian should only be used for persons and not for vehicle '%'.
